# asgi-app-template

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
etc/alembic/: env.py
etc/alembic/versions/: 90096645dccd_add_tables.py
src/apat/: settings.py
src/apat/api/: main.py
src/apat/customers/: crud.py  endpoints.py  models.py  schema.py  tables.py
src/apat/database/: database.py  deps.py  tables.py
tests/: conftest.py
tests/customers/: conftest.py  test_crud.py
tests/utils/: factory.py
